fix(hopefully): 100vh issue on ios

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,7 +53,15 @@
   html,
   body,
   #__next {
-    @apply h-full;
+    @apply h-screen;
+  }
+
+  @supports (-webkit-touch-callout: none) {
+    html,
+    body,
+    #__next {
+      height: -webkit-fill-available;
+    }
   }
 
   a {
